# gabr

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
backend/: manage.py
backend/blog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/blog/tests/: test_model_article.py
backend/gabr/: settings.py  urls.py  wsgi.py
backend/perfil/: admin.py  models.py  serializers.py
backend/users/: models.py
frontend/js/: App.js
frontend/js/apps/article/Article/: index.js
frontend/js/apps/blog/Blog/: index.js  styles.scss
frontend/js/apps/blog/Content/: index.js  styles.scss
frontend/js/apps/blog/Header/: index.js  styles.scss
frontend/js/services/: ArticleService.js  CategoryService.js  api.js  index.js
frontend/sass/: _global.scss  _variables.scss
